--- a/src/app/ApexChart/ApexChart.css
+++ b/src/app/ApexChart/ApexChart.css
@@ -10,3 +10,22 @@
     justify-content: center;
 
 }
+
+.dropDownButton {
+    width: 50px;
+    height: 50px;
+    background-color: lightgrey;
+}
+
+.dropDownContainer {
+    display: 'flex';
+    flex-direction: 'column'
+}
+
+.btcHeading {
+    padding-right: 5px;
+}
+
+.flexContent {
+    display: flex;
+}
